--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -955,6 +955,134 @@
    "id": "077dcf66",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Get the descriptive statistics for the per_school_capita.\n",
+    "per_school_capita.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5602d6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cut the per_school_capita into the spending ranges.\n",
+    "spending_bins = [0, 585, 615, 645, 675]\n",
+    "per_school_capita.groupby(pd.cut(per_school_capita, spending_bins)).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88be88f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cut the per_school_capita into the spending ranges.\n",
+    "spending_bins = [0, 585, 630, 645, 675]\n",
+    "per_school_capita.groupby(pd.cut(per_school_capita, spending_bins)).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e383ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Establish the spending bins and group names.\n",
+    "spending_bins = [0, 585, 630, 645, 675]\n",
+    "group_names = [\"<$584\", \"$585-629\", \"$630-644\", \"$645-675\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f8a6295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Categorize spending based on the bins.\n",
+    "per_school_summary_df[\"Spending Ranges (Per Student)\"] = pd.cut(per_school_capita, spending_bins, labels=group_names)\n",
+    "\n",
+    "per_school_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e3beb04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "spending_math_scores = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "spending_reading_scores = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "spending_passing_math = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "spending_passing_reading = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "overall_passing_spending = per_school_summary_df.groupby([\"Spending Ranges (Per Student)\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a391e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overall_passing_spending"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "344422f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "spending_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : spending_math_scores,\n",
+    "          \"Average Reading Score\": spending_reading_scores,\n",
+    "          \"% Passing Math\": spending_passing_math,\n",
+    "          \"% Passing Reading\": spending_passing_reading,\n",
+    "          \"% Overall Passing\": overall_passing_spending})\n",
+    "\n",
+    "spending_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "320347eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Formatting\n",
+    "spending_summary_df[\"Average Math Score\"] = spending_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "spending_summary_df[\"Average Reading Score\"] = spending_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "spending_summary_df[\"% Passing Math\"] = spending_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "spending_summary_df[\"% Passing Reading\"] = spending_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "spending_summary_df[\"% Overall Passing\"] = spending_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "spending_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e8181eb",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
