Scores by school size.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1083,6 +1083,89 @@
    "id": "5e8181eb",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Establish the bins.\n",
+    "size_bins = [0, 1000, 2000, 5000]\n",
+    "group_names = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f72733e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Categorize spending based on the bins.\n",
+    "per_school_summary_df[\"School Size\"] = pd.cut(per_school_summary_df[\"Total Students\"], size_bins, labels=group_names)\n",
+    "\n",
+    "per_school_summary_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dd82e53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "size_math_scores = per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "size_reading_scores = per_school_summary_df.groupby([\"School Size\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "size_passing_math = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "size_passing_reading = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "size_overall_passing = per_school_summary_df.groupby([\"School Size\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "177691a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "size_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : size_math_scores,\n",
+    "          \"Average Reading Score\": size_reading_scores,\n",
+    "          \"% Passing Math\": size_passing_math,\n",
+    "          \"% Passing Reading\": size_passing_reading,\n",
+    "          \"% Overall Passing\": size_overall_passing})\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "031cde12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Formatting.\n",
+    "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Math\"] = size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc7fb61",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
